--- a/projects.html
+++ b/projects.html
@@ -2,227 +2,293 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PAGE TITLE – Mariana Torres</title>
+  <title>Projects – Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
   <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
     rel="stylesheet"
   />
 
   <style>
     :root {
-      --bg: #050608;
       --bg-soft: #090b10;
       --text-main: #f5f5f5;
       --text-muted: #a6a9b5;
       --accent: #78d3ff;
-      --max-width: 960px;
-    }
-
-    * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
+      --max-width: 1100px;
     }
 
     body {
       margin: 0;
+      padding: 0;
+      min-height: 100vh;
       background: radial-gradient(circle at top, #141623 0, #050608 55%);
       color: var(--text-main);
-      font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
+      font-family: "Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
     }
 
-    a {
-      color: var(--accent);
+    /* ---------------- HEADER + MENU ---------------- */
+
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 68px;
+      background: rgba(5, 6, 8, 0.90);
+      backdrop-filter: blur(6px);
+      z-index: 1000;
+    }
+
+    nav {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      height: 100%;
+      padding: 0 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    /* Logotipo / Nome */
+    .brand {
+      font-family: "Bebas Kai";
+      font-size: 1.2rem;
+      letter-spacing: 0.17em;
+      color: var(--text-main);
       text-decoration: none;
     }
 
-    a:hover {
-      text-decoration: underline;
-    }
-
-    h1, h2, h3, h4 {
-      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      margin-top: 0;
-    }
-
-    p {
-      margin: 0 0 0.8rem;
-      line-height: 1.7;
-      font-size: 0.98rem;
-    }
-
-    .page {
-      min-height: 100vh;
-    }
-
-    .shell {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 18px 18px 60px;
-    }
-
-    @media (min-width: 768px) {
-      .shell {
-        padding: 28px 24px 80px;
-      }
-    }
-
-    /* NAVBAR */
-
-    .navbar {
-      position: sticky;
-      top: 0;
-      z-index: 20;
-      background: rgba(5, 6, 8, 0.96);
-      backdrop-filter: blur(16px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
-    }
-
-    .navbar-inner {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 10px 18px;
+    /* Menu */
+    .menu {
+      list-style: none;
       display: flex;
+      gap: 22px;
+      margin: 0;
+      padding: 0;
+      font-size: 0.92rem;
+      color: var(--text-muted);
       align-items: center;
-      justify-content: space-between;
-      gap: 16px;
     }
 
-    .nav-logo {
-      font-family: "Bebas Kai", sans-serif;
-      font-size: 1.1rem;
-      letter-spacing: 0.18em;
+    .menu a {
+      color: inherit;
+      text-decoration: none;
+      position: relative;
+      padding-bottom: 2px;
+      white-space: nowrap;
     }
 
-    .nav-logo span {
+    .menu a:hover {
       color: var(--accent);
     }
 
-    .nav-links {
-      display: none;
-      gap: 18px;
-      font-size: 0.9rem;
-      color: var(--text-muted);
-    }
-
-    .nav-links a {
-      position: relative;
-      padding-bottom: 2px;
-    }
-
-    .nav-links a::after {
+    /* Underline hover */
+    .menu a::after {
       content: "";
       position: absolute;
       left: 0;
       bottom: 0;
-      width: 0;
+      width: 0%;
       height: 1px;
       background: var(--accent);
-      transition: width 0.16s ease-out;
+      transition: width 0.2s;
     }
 
-    .nav-links a:hover::after {
+    .menu a:hover::after {
       width: 100%;
     }
 
-    @media (min-width: 820px) {
-      .nav-links {
-        display: flex;
-      }
+    /* Dropdowns */
+    .dropdown {
+      position: relative;
     }
 
-    /* MAIN LAYOUT */
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 26px;
+      left: 0;
+      min-width: 220px;
+      background: rgba(5, 6, 8, 0.97);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 10px 0;
+      list-style: none;
+      z-index: 999;
+    }
+
+    .dropdown-content li {
+      padding: 4px 14px;
+      white-space: nowrap;
+    }
+
+    .dropdown-content li a {
+      display: block;
+      color: var(--text-muted);
+    }
+
+    .dropdown-content li a:hover {
+      color: var(--accent);
+      background: rgba(255, 255, 255, 0.06);
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    /* ---------------- PAGE LAYOUT ---------------- */
 
     main {
-      padding-top: 28px;
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 120px 20px 60px; /* 120px para compensar o header fixo */
     }
 
     .page-header {
-      margin-bottom: 20px;
+      text-align: center;
+      margin-bottom: 40px;
     }
 
-    .page-header h1 {
-      font-size: 2rem;
+    .page-title {
+      font-family: "Bebas Kai";
+      font-size: 2.4rem;
+      letter-spacing: 0.18em;
+      margin: 0 0 0.4rem;
+    }
+
+    .page-subtitle {
+      font-size: 1rem;
+      color: var(--text-muted);
+      max-width: 640px;
+      margin: 0 auto;
+    }
+
+    .projects-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 40px;
+    }
+
+    @media (min-width: 900px) {
+      .projects-grid {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+    }
+
+    .project-block-title {
+      font-family: "Bebas Kai";
+      font-size: 1.4rem;
+      letter-spacing: 0.16em;
       margin-bottom: 0.3rem;
     }
 
-    .page-header p {
+    .project-block-sub {
+      font-size: 0.9rem;
       color: var(--text-muted);
-      font-size: 0.96rem;
+      margin-bottom: 0.8rem;
     }
 
-    .footer {
-      padding-top: 20px;
-      border-top: 1px solid rgba(255, 255, 255, 0.06);
-      font-size: 0.8rem;
-      color: var(--text-muted);
-      text-align: center;
-      margin-top: 40px;
+    .project-block-text {
+      font-size: 0.96rem;
+      color: var(--text-main);
+      line-height: 1.7;
+      margin-bottom: 0.6rem;
+    }
+
+    .project-link {
+      font-size: 0.9rem;
+      color: var(--accent);
+    }
+
+    .project-link a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    .project-link a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
+
 <body>
-  <div class="page">
-    <!-- NAVBAR (igual em todas as páginas) -->
-   <nav class="nav-links">
-  <div class="nav-item">
-    <a href="index.html">Home</a>
-  </div>
 
-  <div class="nav-item">
-    <a href="about.html">About</a>
-  </div>
+  <!-- ---------------- HEADER ---------------- -->
+  <header>
+    <nav>
+      <a href="index.html" class="brand">MARIANA TORRES</a>
 
-  <div class="nav-item has-dropdown">
-    <a href="projects.html">Projects</a>
-    <div class="dropdown-menu">
-      <a href="artistic-works.html">Artistic Works</a>
-      <a href="research-preservation.html">Research &amp; Preservation Works</a>
-    </div>
-  </div>
+      <ul class="menu">
+        <li><a href="about.html">About</a></li>
 
-  <div class="nav-item has-dropdown">
-    <a href="analogue-film.html">Analogue Film Practice</a>
-    <div class="dropdown-menu">
-      <a href="photochemical-techniques.html">Photochemical Techniques</a>
-      <a href="technical-documentation.html">Technical Documentation</a>
-      <a href="darkroom-lab.html">Darkroom / Lab Work</a>
-      <!-- Aqui pode aparecer uma âncora dentro de analogue-film.html se quiseres ter "Lab Notes" como secção interna -->
-      <!-- <a href="analogue-film.html#lab-notes">Lab Notes</a> -->
-    </div>
-  </div>
+        <li class="dropdown">
+          <a href="projects.html">Projects ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+          </ul>
+        </li>
 
-  <div class="nav-item">
-    <a href="writing.html">Writing &amp; Publications</a>
-  </div>
-</nav>
+        <li class="dropdown">
+          <a href="analogue-film.html">Analogue Film Practice ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
+            <li><a href="technical-documentation.html">Technical Documentation</a></li>
+            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
+          </ul>
+        </li>
 
+        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- CONTEÚDO ESPECÍFICO DE CADA PÁGINA -->
-    <main class="shell">
-      <section class="page-header">
-        <h1>PAGE TITLE</h1>
-        <p>Short intro / description for this page.</p>
-      </section>
+  <!-- ---------------- MAIN CONTENT ---------------- -->
+  <main>
+    <header class="page-header">
+      <h1 class="page-title">PROJECTS</h1>
+      <p class="page-subtitle">
+        A selection of artistic works and research-based projects developed across film archives,
+        analogue film practice and moving image contexts.
+      </p>
+    </header>
 
-      <!-- Aqui vais pôr o conteúdo da página específica -->
-      <!-- Por agora podes deixar vazio e depois preencher. -->
+    <section class="projects-grid">
+      <!-- Artistic Works block -->
+      <article>
+        <h2 class="project-block-title">ARTISTIC WORKS</h2>
+        <p class="project-block-sub">Film, performance, moving image installations.</p>
+        <p class="project-block-text">
+          This section gathers film works, performances and moving image experiments developed
+          with analogue and digital media. It includes projects that explore projection as a
+          performative gesture, the materiality of colour, and the relationship between film
+          technology and embodied viewing.
+        </p>
+        <p class="project-link">
+          → Explore the full list in <a href="artistic-works.html">Artistic Works</a>
+        </p>
+      </article>
 
-    </main>
+      <!-- Research & Preservation block -->
+      <article>
+        <h2 class="project-block-title">RESEARCH &amp; PRESERVATION WORKS</h2>
+        <p class="project-block-sub">Archival research, restoration and preservation projects.</p>
+        <p class="project-block-text">
+          Here you will find projects grounded in archival practice, preservation and the politics
+          of moving image memory. These works often emerge from collaborations with film archives,
+          research collectives and cultural institutions, focusing on unfinished films, militant
+          cinema and countercultural histories.
+        </p>
+        <p class="project-link">
+          → Explore the full list in <a href="research-preservation.html">Research &amp; Preservation Works</a>
+        </p>
+      </article>
+    </section>
+  </main>
 
-    <div class="footer">
-      © <span id="year"></span> Mariana Torres
-    </div>
-  </div>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
