--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
       height: auto;
       display: block;
       border-radius: 4px;
+       mix-blend-mode: multiply;
+    opacity: 0.9;
     }
 
     /* Responsivo: ajustar título em ecrãs pequenos */
