--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
       max-width: 1100px;
       margin: 40px auto 60px; /* espaço acima e abaixo */
       padding: 0 20px;
+      mix-blend-mode: multiply;
+      opacity: 0.9;
     }
 
     .featured-image img {
