--- a/artistic-works.html
+++ b/artistic-works.html
@@ -2,211 +2,273 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PAGE TITLE – Mariana Torres</title>
+  <title>Artistic Works – Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
   <style>
     :root {
-      --bg: #050608;
       --bg-soft: #090b10;
       --text-main: #f5f5f5;
       --text-muted: #a6a9b5;
       --accent: #78d3ff;
-      --max-width: 960px;
-    }
-
-    * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
+      --max-width: 1100px;
     }
 
     body {
       margin: 0;
-      background: radial-gradient(circle at top, #141623 0, #050608 55%);
+      padding: 0;
+      background: #050608;
       color: var(--text-main);
-      font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
+      font-family: "Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
     }
 
-    a {
-      color: var(--accent);
+    /* ---------------- HEADER ---------------- */
+
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 68px;
+      background: rgba(5, 6, 8, 0.80);
+      backdrop-filter: blur(6px);
+      z-index: 1000;
+    }
+
+    nav {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      height: 100%;
+      padding: 0 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .brand {
+      font-family: "Bebas Kai";
+      font-size: 1.2rem;
+      letter-spacing: 0.17em;
+      color: var(--text-main);
       text-decoration: none;
     }
 
-    a:hover {
-      text-decoration: underline;
-    }
-
-    h1, h2, h3, h4 {
-      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      margin-top: 0;
-    }
-
-    p {
-      margin: 0 0 0.8rem;
-      line-height: 1.7;
-      font-size: 0.98rem;
-    }
-
-    .page {
-      min-height: 100vh;
-    }
-
-    .shell {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 18px 18px 60px;
-    }
-
-    @media (min-width: 768px) {
-      .shell {
-        padding: 28px 24px 80px;
-      }
-    }
-
-    /* NAVBAR */
-
-    .navbar {
-      position: sticky;
-      top: 0;
-      z-index: 20;
-      background: rgba(5, 6, 8, 0.96);
-      backdrop-filter: blur(16px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
-    }
-
-    .navbar-inner {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 10px 18px;
+    .menu {
+      list-style: none;
       display: flex;
+      gap: 22px;
+      margin: 0;
+      padding: 0;
+      font-size: 0.92rem;
+      color: var(--text-muted);
       align-items: center;
-      justify-content: space-between;
-      gap: 16px;
     }
 
-    .nav-logo {
-      font-family: "Bebas Kai", sans-serif;
-      font-size: 1.1rem;
-      letter-spacing: 0.18em;
+    .menu a {
+      color: inherit;
+      text-decoration: none;
+      position: relative;
+      padding-bottom: 2px;
+      white-space: nowrap;
     }
 
-    .nav-logo span {
+    .menu a:hover {
       color: var(--accent);
     }
 
-    .nav-links {
-      display: none;
-      gap: 18px;
-      font-size: 0.9rem;
-      color: var(--text-muted);
-    }
-
-    .nav-links a {
-      position: relative;
-      padding-bottom: 2px;
-    }
-
-    .nav-links a::after {
+    .menu a::after {
       content: "";
       position: absolute;
       left: 0;
       bottom: 0;
-      width: 0;
+      width: 0%;
       height: 1px;
       background: var(--accent);
-      transition: width 0.16s ease-out;
+      transition: width 0.2s;
     }
 
-    .nav-links a:hover::after {
+    .menu a:hover::after {
       width: 100%;
     }
 
-    @media (min-width: 820px) {
-      .nav-links {
-        display: flex;
-      }
+    /* Dropdowns */
+    .dropdown {
+      position: relative;
     }
 
-    /* MAIN LAYOUT */
-
-    main {
-      padding-top: 28px;
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 26px;
+      left: 0;
+      min-width: 220px;
+      background: rgba(5, 6, 8, 0.97);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 10px 0;
+      list-style: none;
+      z-index: 999;
     }
 
-    .page-header {
-      margin-bottom: 20px;
+    .dropdown-content li {
+      padding: 4px 14px;
+      white-space: nowrap;
     }
 
-    .page-header h1 {
-      font-size: 2rem;
-      margin-bottom: 0.3rem;
-    }
-
-    .page-header p {
+    .dropdown-content li a {
+      display: block;
       color: var(--text-muted);
-      font-size: 0.96rem;
     }
 
-    .footer {
-      padding-top: 20px;
-      border-top: 1px solid rgba(255, 255, 255, 0.06);
-      font-size: 0.8rem;
-      color: var(--text-muted);
+    .dropdown-content li a:hover {
+      color: var(--accent);
+      background: rgba(255, 255, 255, 0.06);
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    /* ---------------- PAGE STRUCTURE ---------------- */
+
+   .page-wrapper {
+      padding-top: 130px; /* space for fixed header */
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    h1 {
+      font-family: "Bebas Kai";
+      font-size: 2.8rem;
+      letter-spacing: 0.12em;
+      margin-bottom: 0.6rem;
       text-align: center;
-      margin-top: 40px;
+    }
+
+    .intro-text {
+      text-align: center;
+      color: var(--text-muted);
+      max-width: 760px;
+      margin: 0 auto 50px;
+      font-size: 1.05rem;
+      line-height: 1.75;
+    }
+
+    /* Project Blocks */
+    .project-item {
+      margin-bottom: 70px;
+      border-left: 1px solid rgba(255,255,255,0.06);
+      padding-left: 22px;
+    }
+
+    .project-item h2 {
+      font-family: "Bebas Kai";
+      letter-spacing: 0.08em;
+      margin-bottom: 0.3rem;
+      font-size: 1.9rem;
+    }
+
+    .project-meta {
+      color: var(--text-muted);
+      font-size: 0.9rem;
+      margin-bottom: 1rem;
+    }
+
+    .project-item p {
+      font-size: 1rem;
+      line-height: 1.7;
+      margin-bottom: 1rem;
+    }
+
+    .project-image {
+      margin-top: 20px;
+      max-width: 100%;
+      border-radius: 6px;
+      opacity: 0.9;
     }
   </style>
 </head>
+
 <body>
-  <div id="navbar-placeholder"></div>
-<script src="navbar-loader.js"></script>
 
-  <div class="page">
-    <!-- NAVBAR (igual em todas as páginas) -->
-    <header class="navbar">
-      <div class="navbar-inner">
-        <div class="nav-logo">MARIANA <span>TORRES</span></div>
-        <nav class="nav-links">
-          <a href="index.html">Home</a>
-          <a href="about.html">About / CV / Contact</a>
-          <a href="projects.html">Projects</a>
-          <a href="analogue-film.html">Analogue Film Practice</a>
-          <a href="writing.html">Writing & Publications</a>
-          <!-- Lab Notes é opcional; podes tirar se não usares -->
-          <a href="lab-notes.html">Lab Notes</a>
-        </nav>
-      </div>
-    </header>
+  <!-- ---------------- HEADER ---------------- -->
+  <header>
+    <nav>
+      <a href="index.html" class="brand">MARIANA TORRES</a>
 
-    <!-- CONTEÚDO ESPECÍFICO DE CADA PÁGINA -->
-    <main class="shell">
-      <section class="page-header">
-        <h1>PAGE TITLE</h1>
-        <p>Short intro / description for this page.</p>
-      </section>
+      <ul class="menu">
+        <li><a href="about.html">About</a></li>
 
-      <!-- Aqui vais pôr o conteúdo da página específica -->
-      <!-- Por agora podes deixar vazio e depois preencher. -->
+        <li class="dropdown">
+          <a href="projects.html">Projects ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="research-preservation.html">Research & Preservation Works</a></li>
+          </ul>
+        </li>
 
-    </main>
+        <li class="dropdown">
+          <a href="analogue-film.html">Analogue Film Practice ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
+            <li><a href="technical-documentation.html">Technical Documentation</a></li>
+            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
+          </ul>
+        </li>
 
-    <div class="footer">
-      © <span id="year"></span> Mariana Torres
+        <li><a href="writing-publications.html">Writing & Publications</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+  <!-- ---------------- CONTENT ---------------- -->
+  <div class="page-wrapper">
+
+    <h1>ARTISTIC WORKS</h1>
+
+    <p class="intro-text">
+      A selection of film performances, visual research, and moving image experiments exploring
+      analogue processes, projection, materiality and the embodied afterlives of cinema.
+    </p>
+
+
+    <!-- ---------- PROJECT TEMPLATE (copy/paste for each work) ---------- -->
+
+    <div class="project-item">
+      <h2>Send Me a Color</h2>
+      <div class="project-meta">16mm Performance · 2024</div>
+
+      <p>
+        A chromatic performance for multiple projectors exploring color separation, refraction
+        and the physical gestures of projection. Developed through duplication experiments
+        and optical filters.
+      </p>
+
+      <!-- Optional image -->
+      <!-- <img src="sendmeacolor.jpg" class="project-image"> -->
     </div>
+
+
+    <div class="project-item">
+      <h2>[Title of Artistic Work #2]</h2>
+      <div class="project-meta">Format · Year</div>
+
+      <p>
+        Description text here — you can duplicate this block to add more artworks. 
+        Each project can include stills, notes, links to video, installation views, etc.
+      </p>
+    </div>
+
+
+    <!-- Add more project blocks the same way -->
   </div>
 
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
